# automacao-precos-xbox

./: .gitignore  README.md  app.py  automacao.py  pyproject.toml  requirements.txt
.github/workflows/: automacao_diaria.yml
dados/: historico_precos.csv
