[project]
name = "automacao-precos-xbox"
version = "0.1.0"
description = "Automação para monitorização de preços de jogos da Xbox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "streamlit",
    "python-dotenv",
    "plotly"
]